@@ -14,6 +14,7 @@
 - Objects can now be edited by double-clicking on them.
 - Changed default keys for Y-axis moving from PgUp/PgDown to Home and End ala MLCAD.
 - [Linux] External programs can now be launched with Wine.
+- Improved external program fault handling: don't try to replace/append the output in case of failure, catch non-zero exit codes.
 - Added a progress box for file loading to respond to desktops while loading files. With large files
 	the no-response policy could be a bad thing.
 - Fixed: Recent files should behave coherently now.
